objects/MMPJ_Ext_Vign_Echantillon__c.object
<CustomObject>
    <description>MMPJ Extranet Vigneron - Used for Cognac</description>
    <fields>
        <fullName>MMPJ_Ext_Vign_AP_presente__c</fullName>
        <label>AP présenté</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>former Name= Etablissement - MMPJ_Ext_Vign_Etablissement</description>
        <label>Bouilleur de profession</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Echantillons (Etablissement)</relationshipLabel>
        <relationshipName>Echantillons_Etablissement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobAccount__c</fullName>
        <label>BlobAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobContainer__c</fullName>
        <label>BlobContainer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobFile__c</fullName>
        <label>BlobFile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Code_Millesime__c</fullName>
        <label>Code Millésime</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Courtier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Courtier</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Echantillons (Courtier)</relationshipLabel>
        <relationshipName>Echantillons_Courtiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Cru__c</fullName>
        <label>Cru</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>Bies</fullName>
                </value>
                <value>
                    <fullName>FB</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>COGN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_DBP__c</fullName>
        <label>DBP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conforme</fullName>
                </value>
                <value>
                    <fullName>Non Conforme</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_DEHP__c</fullName>
        <label>DEHP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conforme</fullName>
                </value>
                <value>
                    <fullName>Non Conforme</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_DINP__c</fullName>
        <label>DINP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conforme</fullName>
                </value>
                <value>
                    <fullName>Non Conforme</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_Enlevement_confirme__c</fullName>
        <label>Date d&apos;enlèvement confirmé</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_de_degustation__c</fullName>
        <label>Date de dégustation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_de_livraison__c</fullName>
        <label>Date de livraison</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_de_presentation__c</fullName>
        <label>Date  de présentation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Document__c</fullName>
        <label>Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Lien_vers_document__c</fullName>
        <formula>&quot;https://www.mmpjetmoi.fr/attachment/file/&quot;&amp;Id&amp;&quot;/&quot; &amp;  MMPJ_Ext_Vign_Livreur__r.Id  &amp; &quot;?type=echantillons-gestion-des-analyses&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lien vers document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Livreur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Livreur</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Echantillons</relationshipLabel>
        <relationshipName>Echantillons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_NO_ECHANT_Spirit__c</fullName>
        <externalId>true</externalId>
        <label>Clé Spirit 1</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Prix_propos__c</fullName>
        <label>Prix proposé</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Statut__c</fullName>
        <formula>IF(
	AND(
		ISPICKVAL(MMPJ_Ext_Vign_DBP__c,&quot;Conforme&quot;),
		ISPICKVAL(MMPJ_Ext_Vign_DEHP__c,&quot;Conforme&quot;),
		ISPICKVAL(MMPJ_Ext_Vign_DINP__c,&quot;Conforme&quot;)
	),
	&quot;Conforme&quot;,
	IF(
		OR(
			ISPICKVAL(MMPJ_Ext_Vign_DBP__c,&quot;&quot;),
			ISPICKVAL(MMPJ_Ext_Vign_DEHP__c,&quot;&quot;),
			ISPICKVAL(MMPJ_Ext_Vign_DINP__c,&quot;&quot;)
		),
		&quot;Sans Analyse&quot;,
		&quot;Non Conforme&quot;
	)
)</formula>
        <label>Statut</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Type_de_Contrat__c</fullName>
        <label>Type de Contrat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BFBC</fullName>
                </value>
                <value>
                    <fullName>CV00</fullName>
                </value>
                <value>
                    <fullName>UVPC</fullName>
                </value>
                <value>
                    <fullName>VIN / BF</fullName>
                </value>
                <value>
                    <fullName>BF EDV ORECO</fullName>
                </value>
                <value>
                    <fullName>BF Stockées Viticulture</fullName>
                </value>
                <value>
                    <fullName>Achat BFBP Autre</fullName>
                </value>
                <value>
                    <fullName>BFBP G7</fullName>
                </value>
                <value>
                    <fullName>Achat Vins</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Echantillon</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_Ext_Vign_Livreur__c</columns>
        <columns>MMPJ_Ext_Vign_Cru__c</columns>
        <columns>MMPJ_Ext_Vign_Code_Millesime__c</columns>
        <columns>MMPJ_Ext_Vign_Statut__c</columns>
        <columns>MMPJ_Ext_Vign_Type_de_Contrat__c</columns>
        <columns>MMPJ_Ext_Vign_Document__c</columns>
        <columns>MMPJ_Ext_Vign_NO_ECHANT_Spirit__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>MMPJ_Ext_Vign_Global_PG_Cognac</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>N° Echantillon</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Echantillons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>